--- a/1page.html
+++ b/1page.html
@@ -14,7 +14,7 @@
       </div>
 
       <div class="foter mt-[200px] text-center">
-        <button class=" shadow-xl w-64 rounded-full from-[#cccccc] to-[#ffffff] bg-gradient-to-b py-3 text-xs font-bold font-[turnpike] text-black"><a href="./2page.html">Xush kelibsiz</a></button>
+        <button class=" shadow-xl w-64 rounded-full from-[#cccccc] to-[#ffffff] bg-gradient-to-b py-3 text-xs font-bold font-[turnpike] text-black"><a href="https://github.com/Izzatillo075/Nanobook/2page.html">Xush kelibsiz</a></button>
         <div>
           <p class="font-[Jomhuria] font-bold text-white">“Nano texnologiyalar akademiyasi”</p>
           <p class="font-[ubuntu] text-white">IT va zamonaviy kasblar markazi</p>
